--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
     <script type="text/babel" data-presets="react">
         ReactDOM.createRoot(document.getElementById('root')).render(<App />);
     </script>
+    
+    <!-- React Components -->
+    <script type="text/babel" data-presets="react" src="components/app.js"></script>
+    
+    <!-- Initialize React App -->
+    <script type="text/babel" data-presets="react">
+        ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+    </script>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
