--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="Styles/styles.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/meetme.css">
+    <link rel="stylesheet" href="styles/skillshowcase.css">
+    <link rel="stylesheet" href="styles/myprojects.css">
+    <link rel="stylesheet" href="styles/whychooseme.css">
+    <link rel="stylesheet" href="styles/letsconnect.css">
+    <link rel="stylesheet" href="styles/additionalskills.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -52,7 +59,7 @@
         <div class="content-wrapper">
             <div class="text-center">
                 <div class="image-wrapper">
-                    <img src="assets/images/profile.jpg" alt="Leivi Dominguez">
+                    <img src="https://via.placeholder.com/240x240" alt="Leivi Dominguez">
                 </div>
                 <h1 class="mbr-section-title">
                     Hi, I'm <span>Leivi Dominguez</span>
