--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/meetme.css">
-    <link rel="stylesheet" href="styles/skillshowcase.css">
-    <link rel="stylesheet" href="styles/myprojects.css">
-    <link rel="stylesheet" href="styles/whychooseme.css">
-    <link rel="stylesheet" href="styles/letsconnect.css">
-    <link rel="stylesheet" href="styles/additionalskills.css">
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
     <!-- Navbar -->
