--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                         <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#resume">Resume</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -115,15 +118,166 @@
             <h2 class="mbr-section-title">My <span>Projects</span></h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Portfolio Website</h3>
-                    <p>A responsive portfolio website built with modern web technologies.</p>
-                    <div class="project-links">
-                        <a href="https://github.com/Leivi521" target="_blank">
-                            <i class="fab fa-github"></i> View Code
-                        </a>
+                    <div class="project-image">
+                        <img src="images/careconnect.jpg" alt="CareConnect Health App">
+                    </div>
+                    <div class="project-content">
+                        <h3>CareConnect</h3>
+                        <p>A modern health application designed for early retirees, providing personalized health tracking, wellness resources, and community connection features to make retirement healthier and more engaging.</p>
+                        <div class="tech-stack">
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>Firebase</span>
+                            <span>Material-UI</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank" class="btn-project">
+                                <i class="fab fa-github"></i> View Code
+                            </a>
+                            <a href="#" target="_blank" class="btn-project">
+                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <!-- Add more project cards here -->
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/gamepedia.jpg" alt="Gamepedia App">
+                    </div>
+                    <div class="project-content">
+                        <h3>Gamepedia</h3>
+                        <p>An interactive gaming discovery platform that helps gamers find their next favorite game through personalized recommendations, detailed game information, and user reviews.</p>
+                        <div class="tech-stack">
+                            <span>React</span>
+                            <span>RAWG API</span>
+                            <span>CSS3</span>
+                            <span>Redux</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank" class="btn-project">
+                                <i class="fab fa-github"></i> View Code
+                            </a>
+                            <a href="#" target="_blank" class="btn-project">
+                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/positive-todo.jpg" alt="Positive Affirmations Todo App">
+                    </div>
+                    <div class="project-content">
+                        <h3>Positive Todo</h3>
+                        <p>A unique todo list application that celebrates task completion with uplifting affirmations, combining productivity with mental wellness to create a more positive and motivating task management experience.</p>
+                        <div class="tech-stack">
+                            <span>JavaScript</span>
+                            <span>HTML5</span>
+                            <span>CSS3</span>
+                            <span>LocalStorage</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank" class="btn-project">
+                                <i class="fab fa-github"></i> View Code
+                            </a>
+                            <a href="#" target="_blank" class="btn-project">
+                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Resume Section -->
+    <section id="resume" class="resume-section">
+        <div class="content-wrapper">
+            <h2 class="mbr-section-title">My <span>Resume</span></h2>
+            <div class="resume-content">
+                <div class="resume-download">
+                    <a href="resume.pdf" target="_blank" class="btn-resume">
+                        <i class="fas fa-download"></i> Download Resume
+                    </a>
+                </div>
+                <div class="profile-section">
+                    <p class="profile-text">Highly motivated and results-oriented Software Developer with 3 years of experience in IT support and customer service. Skilled in front-end development utilizing React, Javascript, CSS, and HTML. Eager to leverage strong problem-solving and communication skills honed in customer service.</p>
+                </div>
+                <div class="skills-tags">
+                    <span>JavaScript</span>
+                    <span>CSS</span>
+                    <span>React</span>
+                    <span>HTML</span>
+                    <span>APIs</span>
+                    <span>Bootstrap</span>
+                    <span>Git</span>
+                    <span>GitHub</span>
+                    <span>Fontawesome</span>
+                    <span>Flask</span>
+                    <span>Python</span>
+                    <span>SQL</span>
+                    <span>Service Now</span>
+                    <span>Remote Support</span>
+                    <span>Troubleshooting</span>
+                </div>
+                <div class="experience-grid">
+                    <div class="experience-card">
+                        <h3>Work Experience</h3>
+                        <div class="timeline">
+                            <div class="timeline-item">
+                                <span class="date">04/2024 - Present</span>
+                                <h4>IT Support Specialist</h4>
+                                <p>HCL Tech</p>
+                                <ul>
+                                    <li>Sole on-site IT staff member for the Volvo Technologies location in Sunnyvale, California</li>
+                                    <li>Oversee setup of devices for all new hires on-site location</li>
+                                    <li>Assist in troubleshooting server room issues including resetting switches and using Putty application</li>
+                                    <li>Using Service-Now to provide Incident services and update device details</li>
+                                </ul>
+                            </div>
+                            <div class="timeline-item">
+                                <span class="date">2021 - 2024</span>
+                                <h4>IT Support Lead</h4>
+                                <p>WIPRO</p>
+                                <ul>
+                                    <li>Oversaw daily operations of the IT support live kiosk at Cisco HQ locations</li>
+                                    <li>Mentored and coached +10 IT personnel in technical and customer service matters</li>
+                                    <li>Resolved over 3000 incidents with excellent communication skills</li>
+                                    <li>Implemented solutions to enhance efficiency in case-handling process</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience-card">
+                        <h3>Education</h3>
+                        <div class="timeline">
+                            <div class="timeline-item">
+                                <span class="date">05/2024 - 10/2024</span>
+                                <h4>Full Stack Software Developer</h4>
+                                <p>4Geeks Academy</p>
+                                <ul>
+                                    <li>Comprehensive Full Stack Development program</li>
+                                    <li>Front-end: HTML, CSS, Javascript, React</li>
+                                    <li>Back-end: Python, SQL, API development</li>
+                                </ul>
+                            </div>
+                            <div class="timeline-item">
+                                <span class="date">2016 - 2019</span>
+                                <h4>Computer Science</h4>
+                                <p>Art Institute</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="languages-section">
+                    <h3>Languages</h3>
+                    <div class="language-tags">
+                        <span>English (Native)</span>
+                        <span>Spanish (Native)</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
