--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
                             </a>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
                             </a>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
                             </a>
                         </div>
                     </div>
@@ -198,8 +198,8 @@
             <h2 class="mbr-section-title">My <span>Resume</span></h2>
             <div class="resume-content">
                 <div class="resume-download">
-                    <a href="resume.pdf" target="_blank" class="btn-resume">
-                        <i class="fas fa-download"></i> Download Resume
+                    <a href="resume.html" target="_blank" class="btn-resume">
+                        <i class="fas fa-download"></i> View Resume
                     </a>
                 </div>
                 <div class="profile-section">
