--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:description" content="Full Stack Developer with expertise in React, JavaScript, and modern web technologies. View my projects and get in touch.">
     <meta name="twitter:image" content="images/portfolio-preview.jpg">
     
-    <title>Leivi Dominguez - Full Stack Developer Portfolio</title>
+    <title>Leivi Dominguez Bruno - Full Stack Developer Portfolio</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -79,8 +79,8 @@
                 <div class="image-wrapper">
                     <img src="https://via.placeholder.com/240x240" alt="Leivi Dominguez">
                 </div>
-                <h1 class="mbr-section-title">
-                    Hi, I'm <span>Leivi Dominguez</span>
+                <h1 class="mbr-section-title">v
+                    Hi, I'm <span>Leivi Dominguez Bruno</span>
                 </h1>
                 <p class="mbr-text">Full Stack Developer passionate about creating elegant, functional web solutions</p>
             </div>
