--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="Styles/styles.css">
+    <link rel="stylesheet" href="Styles/projectSection.css">
+    <link rel="stylesheet" href="Styles/hero.css">
+    <link rel="stylesheet" href="Styles/skillsSection.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <span>Leivi</span>521
+                <span>GitHub: Leivi</span>521
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -55,7 +58,7 @@
         <div class="content-wrapper">
             <div class="text-center">
                 <div class="image-wrapper">
-                    <img src="https://via.placeholder.com/240x240" alt="Leivi Dominguez">
+                    <img src="Images/linkinphoto.jpg" alt="Leivi Dominguez">
                 </div>
                 <h1 class="mbr-section-title">
                     Hi, I'm <span>Leivi Dominguez</span>
