--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="Styles/projectSection.css">
     <link rel="stylesheet" href="Styles/hero.css">
     <link rel="stylesheet" href="Styles/skillsSection.css">
+    <link rel="stylesheet" href="Styles/gl.css">
 </head>
 <body>
     <!-- Navbar -->
