--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="Styles/projectSection.css">
     <link rel="stylesheet" href="Styles/hero.css">
     <link rel="stylesheet" href="Styles/skillsSection.css">
-    <link rel="stylesheet" href="Styles/gl.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -62,9 +61,27 @@
                     <img src="Images/linkinphoto.jpg" alt="Leivi Dominguez">
                 </div>
                 <h1 class="mbr-section-title">
-                    Hi, I'm <span>Leivi Dominguez</span>
+                    Hi, I'm <span class="name">Leivi Dominguez</span>
                 </h1>
                 <p class="mbr-text">Full Stack Developer passionate about creating elegant, functional web solutions</p>
+                <div class="hero-nav-buttons">
+                    <a href="#skills" class="nav-btn">
+                        <i class="fas fa-code"></i>
+                        Skills
+                    </a>
+                    <a href="#projects" class="nav-btn">
+                        <i class="fas fa-project-diagram"></i>
+                        Projects
+                    </a>
+                    <a href="#resume" class="nav-btn">
+                        <i class="fas fa-file-alt"></i>
+                        Resume
+                    </a>
+                    <a href="#contact" class="nav-btn">
+                        <i class="fas fa-envelope"></i>
+                        Contact
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -139,7 +156,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
                             </a>
                         </div>
                     </div>
@@ -163,7 +180,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
                             </a>
                         </div>
                     </div>
@@ -187,7 +204,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
                             </a>
                         </div>
                     </div>
@@ -304,7 +321,13 @@
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
+    <!-- Particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    
     <!-- Custom JavaScript -->
-    <script src="js/main.js"></script>
+    <script src="js/main.js" defer></script>
+
+    <!-- Particles Container -->
+    <div id="particles-js"></div>
 </body>
 </html>
