updated hero-speech bubbles

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <div class="text-center">
                 <div class="image-wrapper">
                     <img src="Images/linkinphoto.jpg" alt="Leivi Dominguez">
+                    <div class="speech-bubbles">
+                        <div class="speech-bubble top-left" data-message="Full Stack Developer">Full Stack Developer</div>
+                        <div class="speech-bubble top-right" data-message="React Expert">React Expert</div>
+                        <div class="speech-bubble bottom-left" data-message="Problem Solver">Problem Solver</div>
+                        <div class="speech-bubble bottom-right" data-message="Creative Developer">Creative Developer</div>
+                    </div>
                 </div>
                 <h1 class="mbr-section-title">
                     Hi, I'm <span class="name">Leivi Dominguez</span>
@@ -156,7 +162,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
                             </a>
                         </div>
                     </div>
@@ -180,7 +186,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
                             </a>
                         </div>
                     </div>
@@ -204,7 +210,7 @@
                                 <i class="fab fa-github"></i> View Code
                             </a>
                             <a href="#" target="_blank" class="btn-project">
-                                <i class="fas fa-external-link-alt"></i> Live Demo (coming soon)
+                                <i class="fas fa-external-link-alt"></i> Live Demo (comming soon)
                             </a>
                         </div>
                     </div>
